# myairflow

./: README.md  pyproject.toml
dags/: movie.py  movie_after.py  movie_spark.py  myetl.py  nuni-bq_dags  seoul.py  seoul2.py  virtual.py  wiki_spark py  wiki_spark.py
pyspark/: movie_meta.py
src/myairflow/: send_notification.py
tests/: test_notification.py
